--- a/package.json
+++ b/package.json
@@ -3,109 +3,139 @@
   "license": "UNLICENSED",
   "vaadin": {
     "dependencies": {
-      "lit-element": "2.4.0",
+      "lit-element": "2.5.1",
       "@polymer/polymer": "3.2.0",
-      "@webcomponents/webcomponentsjs": "^2.2.10",
       "@vaadin/vaadin-icons": "4.3.2",
-      "@vaadin/vaadin-grid": "5.7.13",
+      "@vaadin/vaadin-grid": "6.0.2",
       "@vaadin/vaadin-split-layout": "4.3.0",
-      "@vaadin/vaadin-combo-box": "5.4.7",
-      "@vaadin/vaadin-core-shrinkwrap": "14.5.4",
-      "@vaadin/vaadin-upload": "4.4.1",
+      "@vaadin/vaadin-combo-box": "6.0.1",
+      "@vaadin/vaadin-core-shrinkwrap": "19.0.7",
+      "@vaadin/vaadin-upload": "5.0.0",
       "@vaadin/vaadin-dialog": "2.5.2",
-      "@vaadin/vaadin-select": "2.4.0",
+      "@vaadin/vaadin-select": "3.0.0",
       "@vaadin/vaadin-app-layout": "2.2.0",
-      "@vaadin/vaadin-item": "2.3.0",
+      "@vaadin/vaadin-item": "3.0.0",
       "@vaadin/vaadin-notification": "1.6.1",
       "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-date-time-picker": "1.4.0",
+      "@vaadin/vaadin-date-time-picker": "2.0.0",
       "@vaadin/vaadin-ordered-layout": "1.4.0",
-      "@vaadin/vaadin-login": "1.2.0",
+      "@vaadin/vaadin-login": "2.0.0",
       "@vaadin/vaadin-button": "2.4.0",
-      "@vaadin/vaadin-date-picker": "4.4.1",
-      "@vaadin/vaadin-text-field": "2.8.4",
-      "@vaadin/vaadin-menu-bar": "1.2.2",
-      "@vaadin/vaadin-custom-field": "1.3.0",
+      "@vaadin/vaadin-date-picker": "5.0.0",
+      "@vaadin/vaadin-text-field": "3.0.2",
+      "@vaadin/vaadin-menu-bar": "2.0.0",
+      "@vaadin/vaadin-custom-field": "2.0.0",
       "@vaadin/vaadin-form-layout": "2.3.0",
       "@vaadin/vaadin-accordion": "1.2.0",
       "@polymer/iron-list": "3.1.0",
-      "@vaadin/vaadin-list-box": "1.4.0",
-      "@vaadin/vaadin-checkbox": "2.5.0",
+      "@vaadin/vaadin-list-box": "2.0.0",
+      "@vaadin/vaadin-checkbox": "3.0.0",
       "@vaadin/vaadin-details": "1.2.0",
       "@polymer/iron-icon": "3.0.1",
-      "@vaadin/vaadin-time-picker": "2.4.0",
-      "@vaadin/vaadin-avatar": "1.0.4",
-      "@vaadin/vaadin-context-menu": "4.5.0",
+      "@vaadin/vaadin-time-picker": "3.0.0",
+      "@vaadin/vaadin-avatar": "2.0.2",
+      "@vaadin/vaadin-context-menu": "5.0.0",
       "@vaadin/vaadin-radio-button": "1.5.1",
-      "@vaadin/vaadin-tabs": "3.2.0",
-      "@vaadin/vaadin-lumo-styles": "1.6.0",
-      "@vaadin/vaadin-material-styles": "1.3.2"
+      "@vaadin/vaadin-tabs": "4.0.0",
+      "@vaadin/vaadin-lumo-styles": "1.6.1",
+      "@vaadin/vaadin-material-styles": "1.3.2",
+      "@vaadin/router": "1.7.2",
+      "lit-html": "1.4.1"
     },
     "devDependencies": {
-      "webpack-babel-multi-target-plugin": "2.3.3",
-      "copy-webpack-plugin": "5.1.2",
       "compression-webpack-plugin": "4.0.1",
-      "raw-loader": "3.1.0",
       "webpack-cli": "3.3.11",
-      "webpack": "4.42.0",
+      "webpack": "4.46.0",
       "ts-loader": "8.0.12",
       "chokidar": "^3.5.0",
       "webpack-merge": "4.2.2",
       "typescript": "4.0.3",
-      "webpack-dev-server": "3.11.0"
+      "webpack-dev-server": "3.11.0",
+      "css-loader": "4.2.1",
+      "file-loader": "6.2.0",
+      "fork-ts-checker-webpack-plugin": "6.2.1",
+      "extra-watch-webpack-plugin": "1.0.3",
+      "glob": "7.1.6",
+      "validator": "13.1.17",
+      "lit-css-loader": "0.0.4",
+      "loader-utils": "2.0.0",
+      "@types/validator": "13.1.0",
+      "workbox-core": "5.1.4",
+      "construct-style-sheets-polyfill": "2.4.16",
+      "html-webpack-plugin": "4.5.1",
+      "workbox-precaching": "5.1.4",
+      "webpack-manifest-plugin": "3.0.0",
+      "extract-loader": "5.1.0",
+      "workbox-webpack-plugin": "5.1.4"
     },
-    "hash": "0a196904c0f202cb809f1399bd8b919943a34af67eac4c979c384c8d96e524ae"
+    "hash": "ad97ad35ec4db17da822ff3e469380c114a08bcdaa4fcdb3e62a40ff7db604f9"
   },
   "dependencies": {
-    "lit-element": "2.4.0",
+    "lit-element": "2.5.1",
     "@polymer/polymer": "3.2.0",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
     "@vaadin/vaadin-icons": "4.3.2",
-    "@vaadin/vaadin-grid": "5.7.13",
+    "@vaadin/vaadin-grid": "6.0.2",
     "@vaadin/vaadin-split-layout": "4.3.0",
-    "@vaadin/vaadin-combo-box": "5.4.7",
-    "@vaadin/vaadin-core-shrinkwrap": "14.5.4",
-    "@vaadin/vaadin-upload": "4.4.1",
+    "@vaadin/vaadin-combo-box": "6.0.1",
+    "@vaadin/vaadin-core-shrinkwrap": "19.0.7",
+    "@vaadin/vaadin-upload": "5.0.0",
     "@vaadin/vaadin-dialog": "2.5.2",
-    "@vaadin/vaadin-select": "2.4.0",
+    "@vaadin/vaadin-select": "3.0.0",
     "@vaadin/vaadin-app-layout": "2.2.0",
-    "@vaadin/vaadin-item": "2.3.0",
+    "@vaadin/vaadin-item": "3.0.0",
     "@vaadin/vaadin-notification": "1.6.1",
     "@vaadin/vaadin-progress-bar": "1.3.0",
-    "@vaadin/vaadin-date-time-picker": "1.4.0",
+    "@vaadin/vaadin-date-time-picker": "2.0.0",
     "@vaadin/vaadin-ordered-layout": "1.4.0",
-    "@vaadin/vaadin-login": "1.2.0",
+    "@vaadin/vaadin-login": "2.0.0",
     "@vaadin/vaadin-button": "2.4.0",
-    "@vaadin/vaadin-date-picker": "4.4.1",
-    "@vaadin/vaadin-text-field": "2.8.4",
-    "@vaadin/vaadin-menu-bar": "1.2.2",
-    "@vaadin/vaadin-custom-field": "1.3.0",
+    "@vaadin/vaadin-date-picker": "5.0.0",
+    "@vaadin/vaadin-text-field": "3.0.2",
+    "@vaadin/vaadin-menu-bar": "2.0.0",
+    "@vaadin/vaadin-custom-field": "2.0.0",
     "@vaadin/vaadin-form-layout": "2.3.0",
     "@vaadin/vaadin-accordion": "1.2.0",
     "@polymer/iron-list": "3.1.0",
-    "@vaadin/vaadin-list-box": "1.4.0",
-    "@vaadin/vaadin-checkbox": "2.5.0",
+    "@vaadin/vaadin-list-box": "2.0.0",
+    "@vaadin/vaadin-checkbox": "3.0.0",
     "@vaadin/vaadin-details": "1.2.0",
     "@polymer/iron-icon": "3.0.1",
-    "@vaadin/vaadin-time-picker": "2.4.0",
-    "@vaadin/vaadin-avatar": "1.0.4",
-    "@vaadin/vaadin-context-menu": "4.5.0",
+    "@vaadin/vaadin-time-picker": "3.0.0",
+    "@vaadin/vaadin-avatar": "2.0.2",
+    "@vaadin/vaadin-context-menu": "5.0.0",
     "@vaadin/vaadin-radio-button": "1.5.1",
-    "@vaadin/vaadin-tabs": "3.2.0",
-    "@vaadin/vaadin-lumo-styles": "1.6.0",
-    "@vaadin/vaadin-material-styles": "1.3.2"
+    "@vaadin/vaadin-tabs": "4.0.0",
+    "@vaadin/vaadin-lumo-styles": "1.6.1",
+    "@vaadin/vaadin-material-styles": "1.3.2",
+    "@vaadin/router": "1.7.2",
+    "lit-html": "1.4.1",
+    "@vaadin/flow-frontend": "./target/flow-frontend",
+    "@vaadin/form": "./target/flow-frontend/form"
   },
   "devDependencies": {
-    "webpack-babel-multi-target-plugin": "2.3.3",
-    "copy-webpack-plugin": "5.1.2",
     "compression-webpack-plugin": "4.0.1",
-    "raw-loader": "3.1.0",
     "webpack-cli": "3.3.11",
-    "webpack": "4.42.0",
+    "webpack": "4.46.0",
     "ts-loader": "8.0.12",
     "chokidar": "^3.5.0",
     "webpack-merge": "4.2.2",
     "typescript": "4.0.3",
-    "webpack-dev-server": "3.11.0"
+    "webpack-dev-server": "3.11.0",
+    "css-loader": "4.2.1",
+    "file-loader": "6.2.0",
+    "fork-ts-checker-webpack-plugin": "6.2.1",
+    "extra-watch-webpack-plugin": "1.0.3",
+    "glob": "7.1.6",
+    "validator": "13.1.17",
+    "lit-css-loader": "0.0.4",
+    "loader-utils": "2.0.0",
+    "@types/validator": "13.1.0",
+    "workbox-core": "5.1.4",
+    "construct-style-sheets-polyfill": "2.4.16",
+    "html-webpack-plugin": "4.5.1",
+    "workbox-precaching": "5.1.4",
+    "webpack-manifest-plugin": "3.0.0",
+    "extract-loader": "5.1.0",
+    "workbox-webpack-plugin": "5.1.4"
   }
 }
