--- a/package.json
+++ b/package.json
@@ -5,42 +5,69 @@
     "dependencies": {
       "lit-element": "2.5.1",
       "@polymer/polymer": "3.2.0",
-      "@vaadin/vaadin-icons": "4.3.2",
-      "@vaadin/vaadin-grid": "6.0.2",
-      "@vaadin/vaadin-split-layout": "4.3.0",
-      "@vaadin/vaadin-combo-box": "6.0.1",
-      "@vaadin/vaadin-core-shrinkwrap": "19.0.7",
-      "@vaadin/vaadin-upload": "5.0.0",
-      "@vaadin/vaadin-dialog": "2.5.2",
-      "@vaadin/vaadin-select": "3.0.0",
-      "@vaadin/vaadin-app-layout": "2.2.0",
-      "@vaadin/vaadin-item": "3.0.0",
-      "@vaadin/vaadin-notification": "1.6.1",
-      "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-date-time-picker": "2.0.0",
-      "@vaadin/vaadin-ordered-layout": "1.4.0",
-      "@vaadin/vaadin-login": "2.0.0",
-      "@vaadin/vaadin-button": "2.4.0",
-      "@vaadin/vaadin-date-picker": "5.0.0",
-      "@vaadin/vaadin-text-field": "3.0.2",
-      "@vaadin/vaadin-menu-bar": "2.0.0",
-      "@vaadin/vaadin-custom-field": "2.0.0",
-      "@vaadin/vaadin-form-layout": "2.3.0",
-      "@vaadin/vaadin-accordion": "1.2.0",
+      "@vaadin/vaadin-icons": "20.0.0",
+      "@vaadin/vaadin-grid": "20.0.0",
+      "@vaadin/vaadin-split-layout": "20.0.0",
+      "@vaadin/vaadin-combo-box": "20.0.0",
+      "@vaadin/vaadin-core-shrinkwrap": "20.0.0",
+      "@vaadin/vaadin-upload": "20.0.0",
+      "@vaadin/vaadin-dialog": "20.0.0",
+      "@vaadin/vaadin-select": "20.0.0",
+      "@vaadin/vaadin-app-layout": "20.0.0",
+      "@vaadin/vaadin-item": "20.0.0",
+      "@vaadin/vaadin-notification": "20.0.0",
+      "@vaadin/vaadin-progress-bar": "20.0.0",
+      "@vaadin/vaadin-date-time-picker": "20.0.0",
+      "@vaadin/vaadin-ordered-layout": "20.0.0",
+      "@vaadin/vaadin-login": "20.0.0",
+      "@vaadin/vaadin-button": "20.0.0",
+      "@vaadin/vaadin-date-picker": "20.0.0",
+      "@vaadin/vaadin-text-field": "20.0.0",
+      "@vaadin/vaadin-menu-bar": "20.0.0",
+      "@vaadin/vaadin-custom-field": "20.0.0",
+      "@vaadin/vaadin-form-layout": "20.0.0",
+      "@vaadin/vaadin-accordion": "20.0.0",
       "@polymer/iron-list": "3.1.0",
-      "@vaadin/vaadin-list-box": "2.0.0",
-      "@vaadin/vaadin-checkbox": "3.0.0",
-      "@vaadin/vaadin-details": "1.2.0",
+      "@vaadin/vaadin-list-box": "20.0.0",
+      "@vaadin/vaadin-checkbox": "20.0.0",
+      "@vaadin/vaadin-details": "20.0.0",
       "@polymer/iron-icon": "3.0.1",
-      "@vaadin/vaadin-time-picker": "3.0.0",
-      "@vaadin/vaadin-avatar": "2.0.2",
-      "@vaadin/vaadin-context-menu": "5.0.0",
-      "@vaadin/vaadin-radio-button": "1.5.1",
-      "@vaadin/vaadin-tabs": "4.0.0",
-      "@vaadin/vaadin-lumo-styles": "1.6.1",
-      "@vaadin/vaadin-material-styles": "1.3.2",
-      "@vaadin/router": "1.7.2",
-      "lit-html": "1.4.1"
+      "@vaadin/vaadin-time-picker": "20.0.0",
+      "@vaadin/vaadin-avatar": "20.0.0",
+      "@vaadin/vaadin-context-menu": "20.0.0",
+      "@vaadin/vaadin-radio-button": "20.0.0",
+      "@vaadin/vaadin-tabs": "20.0.0",
+      "@vaadin/vaadin-lumo-styles": "20.0.0",
+      "@vaadin/vaadin-material-styles": "20.0.0",
+      "@vaadin/router": "1.7.4",
+      "lit-html": "1.4.1",
+      "construct-style-sheets-polyfill": "2.4.16",
+      "@vaadin/vaadin-messages": "20.0.0",
+      "@polymer/iron-a11y-announcer": "3.0.2",
+      "@polymer/iron-a11y-keys-behavior": "3.0.1",
+      "@polymer/iron-fit-behavior": "3.0.2",
+      "@polymer/iron-flex-layout": "3.0.1",
+      "@polymer/iron-iconset-svg": "3.0.1",
+      "@polymer/iron-media-query": "3.0.1",
+      "@polymer/iron-meta": "3.0.1",
+      "@polymer/iron-overlay-behavior": "3.0.3",
+      "@polymer/iron-resizable-behavior": "3.0.1",
+      "@polymer/iron-scroll-target-behavior": "3.0.1",
+      "@webcomponents/shadycss": "1.9.6",
+      "@vaadin/vaadin-control-state-mixin": "20.0.0",
+      "@vaadin/vaadin-development-mode-detector": "2.0.4",
+      "@vaadin/vaadin-element-mixin": "20.0.0",
+      "@vaadin/vaadin-list-mixin": "20.0.0",
+      "@vaadin/vaadin-overlay": "20.0.0",
+      "@vaadin/vaadin-themable-mixin": "20.0.0",
+      "@vaadin/vaadin-usage-statistics": "2.1.0",
+      "@vaadin/vaadin-board": "20.0.0",
+      "@vaadin/vaadin-charts": "20.0.0",
+      "@vaadin/vaadin-confirm-dialog": "20.0.0",
+      "@vaadin/vaadin-cookie-consent": "20.0.0",
+      "@vaadin/vaadin-crud": "20.0.0",
+      "@vaadin/vaadin-grid-pro": "20.0.0",
+      "@vaadin/vaadin-rich-text-editor": "20.0.0"
     },
     "devDependencies": {
       "compression-webpack-plugin": "4.0.1",
@@ -49,7 +76,7 @@
       "ts-loader": "8.0.12",
       "chokidar": "^3.5.0",
       "webpack-merge": "4.2.2",
-      "typescript": "4.0.3",
+      "typescript": "4.2.3",
       "webpack-dev-server": "3.11.0",
       "css-loader": "4.2.1",
       "file-loader": "6.2.0",
@@ -60,57 +87,83 @@
       "lit-css-loader": "0.0.4",
       "loader-utils": "2.0.0",
       "@types/validator": "13.1.0",
-      "workbox-core": "5.1.4",
-      "construct-style-sheets-polyfill": "2.4.16",
+      "workbox-core": "6.1.0",
       "html-webpack-plugin": "4.5.1",
-      "workbox-precaching": "5.1.4",
+      "workbox-precaching": "6.1.0",
       "webpack-manifest-plugin": "3.0.0",
       "extract-loader": "5.1.0",
-      "workbox-webpack-plugin": "5.1.4"
+      "workbox-webpack-plugin": "6.1.0"
     },
-    "hash": "ad97ad35ec4db17da822ff3e469380c114a08bcdaa4fcdb3e62a40ff7db604f9"
+    "hash": "d603ed5d197a67ce9ec06fe07dad022d2ad4be388b131217f687d52ce8500e49"
   },
   "dependencies": {
     "lit-element": "2.5.1",
     "@polymer/polymer": "3.2.0",
-    "@vaadin/vaadin-icons": "4.3.2",
-    "@vaadin/vaadin-grid": "6.0.2",
-    "@vaadin/vaadin-split-layout": "4.3.0",
-    "@vaadin/vaadin-combo-box": "6.0.1",
-    "@vaadin/vaadin-core-shrinkwrap": "19.0.7",
-    "@vaadin/vaadin-upload": "5.0.0",
-    "@vaadin/vaadin-dialog": "2.5.2",
-    "@vaadin/vaadin-select": "3.0.0",
-    "@vaadin/vaadin-app-layout": "2.2.0",
-    "@vaadin/vaadin-item": "3.0.0",
-    "@vaadin/vaadin-notification": "1.6.1",
-    "@vaadin/vaadin-progress-bar": "1.3.0",
-    "@vaadin/vaadin-date-time-picker": "2.0.0",
-    "@vaadin/vaadin-ordered-layout": "1.4.0",
-    "@vaadin/vaadin-login": "2.0.0",
-    "@vaadin/vaadin-button": "2.4.0",
-    "@vaadin/vaadin-date-picker": "5.0.0",
-    "@vaadin/vaadin-text-field": "3.0.2",
-    "@vaadin/vaadin-menu-bar": "2.0.0",
-    "@vaadin/vaadin-custom-field": "2.0.0",
-    "@vaadin/vaadin-form-layout": "2.3.0",
-    "@vaadin/vaadin-accordion": "1.2.0",
+    "@vaadin/vaadin-icons": "20.0.0",
+    "@vaadin/vaadin-grid": "20.0.0",
+    "@vaadin/vaadin-split-layout": "20.0.0",
+    "@vaadin/vaadin-combo-box": "20.0.0",
+    "@vaadin/vaadin-core-shrinkwrap": "20.0.0",
+    "@vaadin/vaadin-upload": "20.0.0",
+    "@vaadin/vaadin-dialog": "20.0.0",
+    "@vaadin/vaadin-select": "20.0.0",
+    "@vaadin/vaadin-app-layout": "20.0.0",
+    "@vaadin/vaadin-item": "20.0.0",
+    "@vaadin/vaadin-notification": "20.0.0",
+    "@vaadin/vaadin-progress-bar": "20.0.0",
+    "@vaadin/vaadin-date-time-picker": "20.0.0",
+    "@vaadin/vaadin-ordered-layout": "20.0.0",
+    "@vaadin/vaadin-login": "20.0.0",
+    "@vaadin/vaadin-button": "20.0.0",
+    "@vaadin/vaadin-date-picker": "20.0.0",
+    "@vaadin/vaadin-text-field": "20.0.0",
+    "@vaadin/vaadin-menu-bar": "20.0.0",
+    "@vaadin/vaadin-custom-field": "20.0.0",
+    "@vaadin/vaadin-form-layout": "20.0.0",
+    "@vaadin/vaadin-accordion": "20.0.0",
     "@polymer/iron-list": "3.1.0",
-    "@vaadin/vaadin-list-box": "2.0.0",
-    "@vaadin/vaadin-checkbox": "3.0.0",
-    "@vaadin/vaadin-details": "1.2.0",
+    "@vaadin/vaadin-list-box": "20.0.0",
+    "@vaadin/vaadin-checkbox": "20.0.0",
+    "@vaadin/vaadin-details": "20.0.0",
     "@polymer/iron-icon": "3.0.1",
-    "@vaadin/vaadin-time-picker": "3.0.0",
-    "@vaadin/vaadin-avatar": "2.0.2",
-    "@vaadin/vaadin-context-menu": "5.0.0",
-    "@vaadin/vaadin-radio-button": "1.5.1",
-    "@vaadin/vaadin-tabs": "4.0.0",
-    "@vaadin/vaadin-lumo-styles": "1.6.1",
-    "@vaadin/vaadin-material-styles": "1.3.2",
-    "@vaadin/router": "1.7.2",
+    "@vaadin/vaadin-time-picker": "20.0.0",
+    "@vaadin/vaadin-avatar": "20.0.0",
+    "@vaadin/vaadin-context-menu": "20.0.0",
+    "@vaadin/vaadin-radio-button": "20.0.0",
+    "@vaadin/vaadin-tabs": "20.0.0",
+    "@vaadin/vaadin-lumo-styles": "20.0.0",
+    "@vaadin/vaadin-material-styles": "20.0.0",
+    "@vaadin/router": "1.7.4",
     "lit-html": "1.4.1",
     "@vaadin/flow-frontend": "./target/flow-frontend",
-    "@vaadin/form": "./target/flow-frontend/form"
+    "@vaadin/form": "./target/flow-frontend/form",
+    "construct-style-sheets-polyfill": "2.4.16",
+    "@vaadin/vaadin-messages": "20.0.0",
+    "@polymer/iron-a11y-announcer": "3.0.2",
+    "@polymer/iron-a11y-keys-behavior": "3.0.1",
+    "@polymer/iron-fit-behavior": "3.0.2",
+    "@polymer/iron-flex-layout": "3.0.1",
+    "@polymer/iron-iconset-svg": "3.0.1",
+    "@polymer/iron-media-query": "3.0.1",
+    "@polymer/iron-meta": "3.0.1",
+    "@polymer/iron-overlay-behavior": "3.0.3",
+    "@polymer/iron-resizable-behavior": "3.0.1",
+    "@polymer/iron-scroll-target-behavior": "3.0.1",
+    "@webcomponents/shadycss": "1.9.6",
+    "@vaadin/vaadin-control-state-mixin": "20.0.0",
+    "@vaadin/vaadin-development-mode-detector": "2.0.4",
+    "@vaadin/vaadin-element-mixin": "20.0.0",
+    "@vaadin/vaadin-list-mixin": "20.0.0",
+    "@vaadin/vaadin-overlay": "20.0.0",
+    "@vaadin/vaadin-themable-mixin": "20.0.0",
+    "@vaadin/vaadin-usage-statistics": "2.1.0",
+    "@vaadin/vaadin-board": "20.0.0",
+    "@vaadin/vaadin-charts": "20.0.0",
+    "@vaadin/vaadin-confirm-dialog": "20.0.0",
+    "@vaadin/vaadin-cookie-consent": "20.0.0",
+    "@vaadin/vaadin-crud": "20.0.0",
+    "@vaadin/vaadin-grid-pro": "20.0.0",
+    "@vaadin/vaadin-rich-text-editor": "20.0.0"
   },
   "devDependencies": {
     "compression-webpack-plugin": "4.0.1",
@@ -119,7 +172,7 @@
     "ts-loader": "8.0.12",
     "chokidar": "^3.5.0",
     "webpack-merge": "4.2.2",
-    "typescript": "4.0.3",
+    "typescript": "4.2.3",
     "webpack-dev-server": "3.11.0",
     "css-loader": "4.2.1",
     "file-loader": "6.2.0",
@@ -130,12 +183,15 @@
     "lit-css-loader": "0.0.4",
     "loader-utils": "2.0.0",
     "@types/validator": "13.1.0",
-    "workbox-core": "5.1.4",
-    "construct-style-sheets-polyfill": "2.4.16",
+    "workbox-core": "6.1.0",
     "html-webpack-plugin": "4.5.1",
-    "workbox-precaching": "5.1.4",
+    "workbox-precaching": "6.1.0",
     "webpack-manifest-plugin": "3.0.0",
     "extract-loader": "5.1.0",
-    "workbox-webpack-plugin": "5.1.4"
+    "workbox-webpack-plugin": "6.1.0",
+    "@vaadin/stats-plugin": "./target/plugins/stats-plugin",
+    "@vaadin/application-theme-plugin": "./target/plugins/application-theme-plugin",
+    "@vaadin/theme-loader": "./target/plugins/theme-loader",
+    "@vaadin/theme-live-reload-plugin": "./target/plugins/theme-live-reload-plugin"
   }
 }
